renamed app from django_application_logic to application_logic

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,8 @@ envlist =
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/django_application_logic
-commands = coverage run --source django_application_logic runtests.py
+    PYTHONPATH = {toxinidir}:{toxinidir}/application_logic
+commands = coverage run --source application_logic runtests.py
 deps =
     django-18: Django>=1.8,<1.9
     django-19: Django>=1.9,<1.10
