--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,10 @@
 language: python
 
 python:
+  - "2.7"
+  - "3.3"
+  - "3.4"
   - "3.5"
-
-env: 
-  - TOX_ENV=py35-django-18
-  - TOX_ENV=py34-django-18
-  - TOX_ENV=py33-django-18
-  - TOX_ENV=py27-django-18
-  - TOX_ENV=py35-django-19
-  - TOX_ENV=py34-django-19
-  - TOX_ENV=py27-django-19
-  - TOX_ENV=py35-django-110
-  - TOX_ENV=py34-django-110
-  - TOX_ENV=py27-django-110
 
 matrix:
   fast_finish: true
@@ -24,7 +15,7 @@ matrix:
 install: pip install -r requirements_test.txt
 
 # command to run tests using coverage, e.g. python setup.py test
-script: tox -e $TOX_ENV
+script: tox
 
 after_success:
-  - codecov -e TOX_ENV
+  - codecov
