--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,12 @@
 [tox]
 envlist =
-    {py27,py33,py34,py35}-django-18
-    {py27,py34,py35}-django-19
-    {py27,py34,py35}-django-110
+    {py27,py33,py34,py35}
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/application_logic
-commands = coverage run --source application_logic runtests.py
+commands = coverage run --source application_logic -m unittest discover
 deps =
-    django-18: Django>=1.8,<1.9
-    django-19: Django>=1.9,<1.10
-    django-110: Django>=1.10
     -r{toxinidir}/requirements_test.txt
 basepython =
     py35: python3.5
