renamed application_logic to business_logic

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
-recursive-include application_logic *.html *.png *.gif *js *.css *jpg *jpeg *svg *py
+recursive-include business_logic *.html *.png *.gif *js *.css *jpg *jpeg *svg *py
