--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@ envlist =
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/application_logic
-commands = coverage run --source application_logic -m unittest discover
+    PYTHONPATH = {toxinidir}:{toxinidir}/business_logic
+commands = coverage run --source business_logic -m unittest discover
 deps =
     -r{toxinidir}/requirements_test.txt
 basepython =
