--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ tag = True
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:application_logic/__init__.py]
+[bumpversion:file:business_logic/__init__.py]
 
 [wheel]
 universal = 1
@@ -13,7 +13,7 @@ universal = 1
 [flake8]
 ignore = D203
 exclude =
-    application_logic/migrations,
+    business_logic/migrations,
     .git,
     .tox,
     docs/conf.py,
