Add gettings started to README.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,10 @@ envlist =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/business_logic
-commands = coverage run --source business_logic -m unittest discover
+commands =
+    coverage run --source business_logic -m unittest discover
+    python -m doctest -v README.rst
+
 deps =
     -r{toxinidir}/requirements_test.txt
 basepython =
