Test python 3.6 support.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py33,py34,py35}
+    {py27,py33,py34,py35,py36}
 
 [testenv]
 setenv =
@@ -9,6 +9,7 @@ commands = coverage run --source business_logic -m unittest discover
 deps =
     -r{toxinidir}/requirements_test.txt
 basepython =
+    py36: python3.6
     py35: python3.5
     py34: python3.4
     py33: python3.3
