--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py33,py34,py35,py36}
+    {py27,py33,py34,py35,py36,py37}
 
 [testenv]
 setenv =
@@ -12,6 +12,7 @@ commands =
 deps =
     -r{toxinidir}/requirements_test.txt
 basepython =
+    py37: python3.7
     py36: python3.6
     py35: python3.5
     py34: python3.4
