--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,19 @@ language: python
 
 python:
   - "2.7"
-  - "3.3"
   - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7"
 
 matrix:
   fast_finish: true
+  include:
+  - python: 3.7
+    dist: xenial
+    sudo: true
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements_test.txt
+install: pip install tox-travis
 
 # command to run tests using coverage, e.g. python setup.py test
 script: tox
