removed verbosity from tox doctest

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/business_logic
 commands =
     coverage run --source business_logic -m unittest discover
-    python -m doctest -v README.rst
+    python -m doctest README.rst
 
 deps =
     -r{toxinidir}/requirements_test.txt
